--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://Ftleyell.github.io/GatoLearner",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",       
+    "deploy": "gh-pages -d dist"          
   },
   "devDependencies": {
     "@types/matter-js": "^0.19.8",
@@ -15,6 +18,7 @@
     "eslint": "^9.25.1",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
+    "gh-pages": "^6.3.0",               
     "prettier": "^3.5.3",
     "typescript": "~5.7.2",
     "vite": "^6.3.1"
