--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "predeploy": "npm run build",       
-    "deploy": "gh-pages -d dist"          
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@types/matter-js": "^0.19.8",
@@ -18,12 +18,13 @@
     "eslint": "^9.25.1",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
-    "gh-pages": "^6.3.0",               
+    "gh-pages": "^6.3.0",
     "prettier": "^3.5.3",
     "typescript": "~5.7.2",
-    "vite": "^6.3.1"
+    "vite": "^6.3.5"
   },
   "dependencies": {
+    "lit": "^3.3.0",
     "matter-js": "^0.20.0"
   }
 }
