--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,13 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "useDefineForClassFields": true,
+    // --- CAMBIO: Ligeramente más moderno, recomendado por Lit ---
+    "target": "ES2021",
+    // --- CAMBIO: Necesario para compatibilidad con decoradores de Lit ---
+    "useDefineForClassFields": false,
     "module": "ESNext",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": ["ES2021", "DOM", "DOM.Iterable"], // Ajustado para coincidir con target
+    // --- NUEVO: Habilita el uso de decoradores (@customElement, @property) ---
+    "experimentalDecorators": true,
     "skipLibCheck": true,
 
     /* Bundler mode */
@@ -18,7 +22,9 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    // --- CAMBIO: Deshabilitado temporalmente para evitar problemas con imports
+    //     que solo registran componentes (ej. import './mi-componente.js') ---
+    "noUncheckedSideEffectImports": false
   },
   "include": ["src"]
 }
